2002-05-08  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* objects/GRAFCET/action.c (action_update_data): Init x value of
	click point for call to connpointlist_adjust_count.

	* app/modify_tool.c (create_modify_tool): Init tool->auto_scrolled

	* app/render_pixmap.c (new_pixmap_renderer): Moved first linestyle
	setting to where values are inited.

	* lib/polyshape.c (polyshape_init): Removed call to
	polyshape_update_data that tried to use uninitialized data.

2002-05-06  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* app/sheets_dialog.c: Mass removal of //-style comments.  The
	Irix compiler doesn't like them:(  I do...

2002-05-06  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_libart.c (draw_string): Bail out when no GDK font is
	found.
	(set_font): Give error when font not found.
	(set_fillstyle): Intlized error msg.

	* app/pagesetup.c (pagesetup_ok, pagesetup_apply): Sets diagram
	modified when applied (and ok only does apply if apply is set
	sensitive).  Fixes bug #75623.

2002-05-06  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi) to ALL_LINGUAS

2002-05-05  Steffen Macke <sdteffen@web.de>

	* app/Makefile.am: added $(UNICODE_CFLAGS)
	
2002-05-02  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/commands.c (help_manual_callback): Check return value of
	opendir.

	* plug-ins/xfig/Makefile.am (INCLUDES): Added DEBUG_FLAGS

	* plug-ins/xfig/xfig-import.c: Fixed misspelled Poly_L_ine, added
	checks for errors.

2002-04-30  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_gdk.c (draw_string): Extra free killed.  Thanks valgrind!

	* objects/UML/uml.c (uml_operation_read): Fix of UML default
	inheritance. 

2002-04-30  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* app/filedlg.c (file_save_as_callback, file_save_as_ok_callback):
	Added button to toggle diagram compression.

2002-04-29  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>
